--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>Trunk Template</title>
-    <link data-trunk rel="sass" href="index.scss" />
+    <link data-trunk rel="css" href="src/styles/yew-styles.css"/>
+    <link data-trunk rel="sass" href="src/styles/main.sass"/>
+    <link data-trunk rel="copy-dir" href="/src/assets"/>
   </head>
 </html>
